@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.5 2011/09/24 05:09:57 obache Exp $
-
-SHA1 (roauth-0.0.8.gem) = d5495b4e18a7c67979095c3e9ff9a0c019bfaa75
-RMD160 (roauth-0.0.8.gem) = 040960697f278b1598f04b3941f2ad72f90038fc
-Size (roauth-0.0.8.gem) = 7168 bytes
